--- a/style2.css
+++ b/style2.css
@@ -6,12 +6,15 @@ main {
 .container {
   position: relative;
   background-color: white;
-  width: auto;
-  height: 70px;
+  width: 100%;
+  max-height: 70px;
   border-radius: 10px 0 0 10px;
   box-shadow: 0 0 40px rgb(89, 0, 255);
   transition: 0.3s;
   margin-bottom: 3rem;
+  overflow: hidden;
+  white-space: nowrap;
+  text-overflow: ellipsis;
 }
 
 .container:hover {
@@ -49,19 +52,39 @@ main {
   opacity: 1;
 }
 
-h2 {
+.container h2 {
   position: absolute;
   top: -15px;
   left: 150px;
 }
 
-.container > p {
+.container p {
   position: absolute;
   top: 12px;
   left: 280px;
-  padding-bottom: 2rem;
 }
 
-#footer {
-  display: none;
+.fa-plane {
+  position: absolute;
+  top: 14px;
+  left: 90px;
+  font-size: 2.5rem;
+}
+
+@media screen and (prefers-color-scheme: dark) {
+  body {
+    background-color: var(--page-background-color-night);
+    color: var(--page-text-color-night);
+  }
+  .container {
+    background-color: var(--page-background-color-night);
+  }
+
+  .header-text a {
+    color: rgb(255, 16, 243);
+  }
+  .header-text a:hover,
+  .header-text a:focus {
+    background-color: rgb(89, 0, 255);
+  }
 }
