add media queris

--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 /* General */
 
 * {
+  box-sizing: border-box;
   margin: 0;
   --page-background-color-night: black;
   --page-text-color-night: white;
@@ -137,6 +138,9 @@ h2 {
   .header-text a:focus {
     background-color: rgb(89, 0, 255);
   }
+  .list-view {
+    background-color: black;
+  }
 }
 
 /* =========  footer ========= */
@@ -186,4 +190,25 @@ h2 {
   padding-left: 1rem;
   font-size: 1rem;
   color: white;
+}
+
+@media screen and (min-width: 901px) {
+  .container {
+    display: none;
+  }
+}
+
+@media screen and (max-width: 900px) {
+  .list-view {
+    display: none;
+  }
+
+  #footer {
+    display: block;
+  }
+  .sos {
+    margin-bottom: 2rem;
+    margin-left: 20%;
+    margin-right: 20%;
+  }
 }
