--- a/style.css
+++ b/style.css
@@ -112,16 +112,6 @@ h2 {
 
 /* ==== Media Queries ==== */
 
-@media screen and (max-width: 640px) {
-  body {
-    margin-left: 5%;
-    margin-right: 5%;
-  }
-  .header-text {
-    margin-right: 15%;
-  }
-}
-
 @media screen and (prefers-color-scheme: dark) {
   body {
     background-color: var(--page-background-color-night);
@@ -131,15 +121,16 @@ h2 {
     background-color: var(--page-background-color-night);
   }
 
+  .images {
+    background-color: black;
+  }
+
   .header-text a {
     color: rgb(255, 16, 243);
   }
   .header-text a:hover,
   .header-text a:focus {
     background-color: rgb(89, 0, 255);
-  }
-  .list-view {
-    background-color: black;
   }
 }
 
@@ -210,5 +201,27 @@ h2 {
     margin-bottom: 2rem;
     margin-left: 20%;
     margin-right: 20%;
+  }
+}
+
+@media screen and (max-width: 650px) {
+  .header {
+    margin-left: 3%;
+    margin-right: 3%;
+  }
+  main {
+    margin-left: 5%;
+    margin-right: 5%;
+  }
+  .header-text {
+    margin-right: 5%;
+  }
+  .sos {
+    margin-bottom: 2rem;
+    margin-left: 9%;
+    padding-bottom: 2rem;
+  }
+  .sos p {
+    margin-right: 0;
   }
 }
