--- a/style2.css
+++ b/style2.css
@@ -1,8 +1,3 @@
-main {
-  margin-left: 20%;
-  margin-right: 20%;
-}
-
 .list-view {
   position: relative;
   background-color: white;
@@ -10,7 +5,6 @@ main {
   max-height: 70px;
   border-radius: 10px 0 0 10px;
   box-shadow: 0 0 40px rgb(89, 0, 255);
-  transition: 0.3s;
   margin-bottom: 3rem;
 }
 
@@ -19,15 +13,13 @@ main {
 }
 
 .list-view .images {
-  overflow: hidden;
   border-radius: 10px 0 0px 10px;
 }
 
 .list-view .natur {
   width: 70px;
-  height: 70px;
+  height: auto;
   border-radius: 10px 0 0 10px;
-  transition: transform 0.3s;
 }
 
 .list-view h2 {
